add simple workflow

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # https://tox.wiki/en/latest/
 # Tox managers virtual environments and is a test CLI
 [tox]
-envlist = py39, pre-commit
+envlist = py38, py39, pre-commit
 isolated_build = True
 
 [testenv]
