--- a/.github/workflows/github-pullrequest-actions.yml
+++ b/.github/workflows/github-pullrequest-actions.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install -r tox
+          python3 -m pip install tox
       - name: Test with Tox
         run: |
           tox
