--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,9 +5,14 @@ repos:
     rev: v2.3.0
     hooks:
       - id: check-yaml
+      - id: check-toml
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://gitlab.com/pycqa/flake8.git
     rev: 4.0.1 # Selected on July 30, 2022
     hooks:
       - id: flake8
+  -   repo: https://github.com/psf/black
+      rev: 21.12b0
+      hooks:
+      -   id: black
