updated version of pre-commit hook repos

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.3.0 # Selected on July 30, 2022
     hooks:
       - id: check-yaml
       - id: check-toml
@@ -13,6 +13,6 @@ repos:
     hooks:
       - id: flake8
   -   repo: https://github.com/psf/black
-      rev: 21.12b0
+      rev: 22.6.0 # Selected on July 30, 2022
       hooks:
       -   id: black
