--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,20 @@
 # https://tox.wiki/en/latest/
 # Tox managers virtual environments and is a test CLI
 [tox]
-envlist = py39, pre-commit
+envlist = py39, pre-commit, pytest
 isolated_build = True
 
 [testenv]
-deps = pytest
-commands = pytest
+setenv =
+    PYTHONDONTWRITEBYTECODE = 1
 
 [testenv:pre-commit]
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
+
+[testenv:pytest]
+deps =
+    pytest
+    -rrequirements.txt
+commands = pytest
