--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ version = "0.0.1"
 description = "A simple chess program"
 readme = "README.md"
 requires-python = ">=3.8"
+
+[tool.black]
+target-version = ["py39"]
