--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,8 +16,12 @@ repos:
       rev: 22.6.0 # Selected on July 30, 2022
       hooks:
       -   id: black
+  -   repo: https://github.com/PyCQA/isort
+      rev: 5.10.1 # Selected on July 30, 2022
+      hooks:
+      -   id: isort
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.4
+    rev: 1.7.4 # Selected on July 30, 2022
     hooks:
       - id: bandit
         args: [--ini, .bandit]
